<resources>
    <string name="app_name">CEGEP E-Learning</string>
    <string name="enhance_your_knowledge">Enhance your knowledge</string>
    <string name="cegep_n_e_learning">CEGEP \n E-Learning</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign_up">Not a Member? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_login">Already a Member? Login</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
